--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 Get your newest startup or tech idea into shape with our help
                 <br><br>
               <small>"Only those who attempt the absurd will achieve the impossible" - M. Escher</small></p>
-              <a href="mail:info@kookconsulting.xyz" class="button" role="button">
+              <a href="mailto:info@kookconsulting.xyz" class="button" role="button">
                 Get in touch
               </a>
             </div>
