--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Kook Consulting - web2 and web3 tech consulting">
+    <meta name="title" content="Kook Consulting - Believers in an interconnected world">
     <meta name="description" content="Get your newest startup or tech idea into shape with our help">
 
     <title>Kook Consulting - web2 and web3 tech consulting</title>
@@ -163,7 +163,7 @@
           <div class="col-md-5 col-sm-5 col-xs-12 text-center">
             <h1>Kook&nbsp;<small>consulting</small></h1>
             <div class="max-width">
-              <h2>Web2 & Web3 technology believers</h2>
+              <h2>Believers in an interconnected world</h2>
               <p>
                 Get your newest startup or tech idea into shape with our help
                 <br><br>
