--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="title" content="Kook Consulting - Believers in an interconnected world">
     <meta name="description" content="Get your newest startup or tech idea into shape with our help">
 
-    <title>Kook Consulting - web2 and web3 tech consulting</title>
+    <title>Kook Consulting - Believers in an interconnected world</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
